[tool.poetry]
name = "fastapi-gino-uvicorn"
version = "0.1.0"
description = "Gino, fastapi template"
authors = ["Gcunhaa <gsalomaoc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
alembic = "^1.4.3"
gino = {extras = ["starlette"], version = "^1.0.1"}
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
